--- a/server/vercel.json
+++ b/server/vercel.json
@@ -2,18 +2,16 @@
   "version": 2,
   "builds": [
     {
-      "src": "api/index.js",
+      "src": "app.js",
       "use": "@vercel/node"
     }
   ],
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "/api/app.js"
+      "dest": "/app.js"
     }
-  ]
-
-
+  ],
   "env": {
     "NODE_ENV": "production"
   }
