--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@stripe/stripe-js": "^7.8.0",
     "@tailwindcss/vite": "^4.1.11",
     "axios": "^1.11.0",
+    "cors": "^2.8.5",
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.537.0",
     "react": "^19.1.0",
